# tochka-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  traefik.yaml
.github/workflows/: docker-image.yml
scripts/: create_database.py
src/: main.py
src/core/config/: settings.py
src/core/methods/: authentication.py  lifespan.py  logger.py
src/core/middleware/: logger.py
src/core/models/: balance.py  instrument.py  order.py  transaction.py  user.py
src/core/objects/: database.py
src/core/schemes/: order.py  settings.py
src/general/: routers.py
src/modules/instruments/: api.py  schemes.py
src/modules/orders/: api.py  methods.py  schemes.py
src/modules/transactions/: api.py  schemes.py
src/modules/users/: api.py  schemes.py
