[project]
name = "tochka-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "everbase",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "uvloop>=0.21.0; sys_platform == 'linux'",
]

[tool.uv.sources]
everbase = { git = "https://github.com/OneTells/everbase.git" }
